# Vulkan-Game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENCE.md  README.md  SCOPE.md  THIRD_PARTY_LICENSES.md
headers/: glfw_fun.h  shared_buffer.h  vk_fun.h
include/vulkan_game/: ext.h  std_c.h  utils.h
includes/timer_lib/: timer.h
shaders/: scene.frag  shadow.frag  shadow.vert
src/: main.c
src/input/: glfw_fun.h  key.c  mouse.c
src/physics/: update.c
src/utils/: glm.c  vector.c
src/vk/: vk_active.c  vk_command.c  vk_depth.c  vk_descriptor.c  vk_device.c  vk_frame.c  vk_fun.h  vk_geometry.c  vk_image.c  vk_instance.c  vk_physical_device.c  vk_pipeline.c  vk_queue.c  vk_shader.c  vk_surface.c  vk_swapchain.c  vk_synchronization.c  vk_vertex.c
